compiler-core/src/snapshots/gleam_core__config__package_config_to_json.snap
---
source: compiler-core/src/config.rs
expression: output
---
--- GLEAM.TOML

name = "my_project"
version = "1.0.0"
licences = ["Apache-2.0", "MIT"]
description = "Pretty complex config"
target = "erlang"
repository = { type = "github", user = "example", repo = "my_dep" }
links = [{ title = "Home page", href = "https://example.com" }]
internal_modules = ["my_app/internal"]
gleam = ">= 0.30.0"

[dependencies]
gleam_stdlib = ">= 0.18.0 and < 2.0.0"
my_other_project = { path = "../my_other_project" }

[dev_dependencies]
gleeunit = ">= 1.0.0 and < 2.0.0"

[documentation]
pages = [{ title = "My Page", path = "my-page.html", source = "./path/to/my-page.md" }]

[erlang]
application_start_module = "my_app/application"
extra_applications = ["inets", "ssl"]

[javascript]
typescript_declarations = true
source_maps = true
runtime = "node"

[javascript.deno]
allow_all = false
allow_ffi = true
allow_env = ["DATABASE_URL"]
allow_net = ["example.com:443"]
allow_read = ["./database.sqlite"]

[luau]
runtime = "roblox"


--- EXPORTED JSON

{
  "name": "my_project",
  "version": "1.0.0",
  "gleam": ">= 0.30.0",
  "licences": [
    "Apache-2.0",
    "MIT"
  ],
  "description": "Pretty complex config",
  "documentation": {
    "pages": [
      {
        "title": "My Page",
        "path": "my-page.html",
        "source": "./path/to/my-page.md"
      }
    ]
  },
  "dependencies": {
    "gleam_stdlib": {
      "version": ">= 0.18.0 and < 2.0.0"
    },
    "my_other_project": {
      "path": "../my_other_project"
    }
  },
  "dev_dependencies": {
    "gleeunit": {
      "version": ">= 1.0.0 and < 2.0.0"
    }
  },
  "repository": {
    "type": "github",
    "user": "example",
    "repo": "my_dep",
    "path": null,
    "tag_prefix": null
  },
  "links": [
    {
      "title": "Home page",
      "href": "https://example.com/"
    }
  ],
  "erlang": {
    "application_start_module": "my_app/application",
    "application_start_argument": null,
    "extra_applications": [
      "inets",
      "ssl"
    ]
  },
  "javascript": {
    "typescript_declarations": true,
    "source_maps": true,
    "runtime": "nodejs",
    "deno": {
      "allow_env": [
        "DATABASE_URL"
      ],
      "allow_sys": false,
      "allow_hrtime": false,
      "allow_net": [
        "example.com:443"
      ],
      "allow_ffi": true,
      "allow_read": [
        "./database.sqlite"
      ],
      "allow_run": [],
      "allow_write": [],
      "allow_all": false,
      "unstable": false,
      "location": null
    }
  },
  "luau": {
    "runtime": "roblox"
  },
  "target": "erlang",
  "internal_modules": [
    "my_app/internal"
  ]
}
